--- a/pages.html
+++ b/pages.html
@@ -11,3 +11,17 @@ group: navigation
 {% assign pages_list = site.pages %}
 {% include JB/pages_list %}
 </ul>
+
+<script>
+(function() {
+    var s = "_" + Math.random().toString(36).slice(2);
+    document.write('<div id="' + s + '"></div>');
+    (window.slotbydup=window.slotbydup || []).push({
+        id: '3260025',
+        container: s,
+        size: '20,5',
+        display: 'inlay-fix'
+    });
+})();
+</script>
+<script src="http://dup.baidustatic.com/js/om.js"></script>
